test/expected/define_ai.out
define SI as auto int
             ^
14: error: "type automatic int" is illegal for built-in type
